# e3e

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  approx.py  decisions.md  docker-compose.yaml  dtest.py  gen_llander_data.py  ltest.py  plot.py  plot_rewards.py  ppo_comparison_report.md  ppo_test.py  pyproject.toml  requirements.txt  test.py  test2.py  test_ppo.py
.devcontainer/: devcontainer.json
scs/: buffer.py  collect_data.py  configuration.py  data.py  data_distributions.py  data_logging.py  encodings.py  env_wrapper.py  evaluation.py  gen_data.py  nn_modules.py  rl_computations.py  utils.py
scs/configs/ppo/: ppo_llander.json  ppo_test_walkerwalk.json  ppo_walkerwalk.json
scs/ppo/: __init__.py  agent.py  agent_config.py  models.py  rollouts.py  training.py
